# duotunnel

./: .cursorignore  .gitignore  1.md  ARCHITECTURE_INDEX.md  ASYNC_CONCURRENT_OPTIMIZATION.md  BEST_PRACTICE_DESIGN.md  CLOUDFLARE_COMPARISON.md  CLOUDFLARE_H2_STREAM_ANALYSIS.md  Cargo.toml  DESIGN_OPTIMIZATION_ANALYSIS.md  DESIGN_PATTERNS_IMPLEMENTATION.md  ENVOY_COMPARISON_ANALYSIS.md  GRPC_ORDERING_ANALYSIS.md  GRPC_PROXY_DESIGN.md  MESSAGE_IDENTIFICATION_DESIGN.md  MULTI_PROTOCOL_STREAM_DESIGN.md  OPTIMAL_PAYLOAD_DESIGN.md  OPTIMIZATION_IMPLEMENTATION_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md  ORDERING_ANALYSIS.md  PAYLOAD_DESIGN_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  README.md  RUST_CODE_AUDIT_REPORT.md  STREAM_DESIGN_ANALYSIS.md  STREAM_SPLIT_ANALYSIS.md  TUNNEL_ARCHITECTURE_ANALYSIS.md  UNIFIED_STREAM_DESIGN.md  ZERO_COPY_OPTIMIZATION_SUMMARY.md  design_patterns_analysis.md  new.md  new_1.md  remove_rust_comments_smart.sh  runtime-tune.md  todo.md  tunnel.proto  verify_proxy.sh  重构.md
.cargo/: config.toml
.cursor/rules/: rustrules.mdc
.github/workflows/: ci.yml  pages.yml
bench/: app.js  data.js  index.html  style.css
ci/: client.yaml  server.yaml
ci-helpers/: BENCHMARK_SPEC.md  Cargo.toml  bench-tool.py  build.rs  client.yaml  collect-metrics.py  collect-resources.py  ctld.yaml  frpc.toml  frps.toml  local-integration-test.sh  local-test-client.yaml  local-test-server.yaml  merge-results.py  monitor.sh  parse-resources.py  publish-bench.py  run-bench-case.sh  run-trace-8k.sh  schema.json  server-standalone.yaml  server.yaml  tunnel-stack.sh  warmup.sh
ci-helpers/bench_ui/: app.js  index.html  publish-gh-pages.sh  style.css
ci-helpers/configs/: ctld.yaml  frpc.toml  frps.toml  server-standalone.yaml  server.yaml
ci-helpers/examples/simple-tunnel/: README.md  client.yaml  server.yaml  test.sh
ci-helpers/k6/: bench-frp.js  bench.js  catalog.js
ci-helpers/k6/cases/: basic.json  body_size.json  defaults.json  frp.json  stress.json
ci-helpers/local-test/: client.yaml  ctld.yaml  server.yaml  test.sh  tunnel-stack.sh
ci-helpers/local-test/examples/simple-tunnel/: client.yaml  server.yaml  test.sh
ci-helpers/proto/: grpc_echo.proto  health.proto
ci-helpers/src/: ci_test_client.rs  grpc_echo_server.rs  http_echo_server.rs  ws_echo_server.rs
client/: Cargo.toml  app.rs  build.rs  client_listener.rs  config.rs  config_manager.rs  conn_pool.rs  connect.rs  connection_pool.rs  connection_state.rs  control.rs  egress_pool.rs  entry.rs  forward.rs  forward_strategies.rs  forwarder.rs  grpc_forwarder.rs  http_forwarder.rs  http_handler.rs  http_request_builder.rs  ingress_handlers.rs  listener_manager.rs  main.rs  message_handlers.rs  metrics.rs  pool.rs  proxy.rs  quic_tunnel_manager.rs  register.rs  reverse.rs  reverse_handler.rs  routing.rs  rule_matcher.rs  rules_engine.rs  session_manager.rs  stream_state.rs  tunnel_client.rs  types.rs  utils.rs  warmup.rs  (+1 more)
client/plugins/: mod.rs
client/plugins/lb_round_robin/: mod.rs
client/plugins/resolver_cached/: mod.rs
config/: client.toml  client.yaml  ctld.yaml  server.toml  server.yaml
docs/: ANALYSIS_REPORT.md  CODE_REVIEW.md  CODE_REVIEW_done.md  DESIGN.md  KNOWN_ISSUES.md  OPTIMIZATIONS.md  PERF_COMPARISON.md  REFACTOR_PLAN.md  arch-tune.md  architecture-analysis.md  backpressure_done.md  code-review-2026-04-26.md  donelist.md  listener_refactoring.md  needconfirm.md  optimization-summary.md  parameters.md  perf-bottleneck-client-entry-egress.md  pingora-tasks.md  plugins.md  plugins_done.md  rust-1.95-and-deps-upgrade-notes.md  rust-1.95-and-deps-upgrade-notes_done.md  tasks-2026-04-16.md  tasks-2026-04-16_done.md  todo.md
proto/: tunnel.proto
scripts/: pgo-build.sh  tune-os.sh
server/: Cargo.toml  client_mgr.rs  config.rs  connection.rs  control.rs  control_client.rs  data_stream.rs  dispatch.rs  egress.rs  egress_forwarder.rs  hot_reload.rs  http.rs  ingress_handlers.rs  listener_mgr.rs  listeners.rs  local_auth.rs  local_registry.rs  main.rs  metrics.rs  null_stores.rs  proxy.rs  registry.rs  rule_matcher.rs  rules.rs  service.rs  streaming_forwarder.rs  tunnel_handler.rs  tunnel_server.rs  tunnel_service.rs  types.rs  utils.rs
server/handlers/: http.rs  ingress.rs  metrics.rs  mod.rs  quic.rs  tcp.rs
server/plugins/: mod.rs
server/plugins/h1/: mod.rs
server/plugins/h2c/: mod.rs
server/plugins/prometheus/: mod.rs
server/plugins/tcp_pass/: mod.rs
server/plugins/tls/: mod.rs
server/plugins/vhost/: mod.rs
tunnel-lib/: Cargo.toml  build.rs  lib.rs
tunnel-lib/src/: accept.rs  connection.rs  connection_pool_decorators.rs  ctld_proto.rs  direct_forward.rs  egress_pool.rs  error.rs  frame.rs  hash.rs  http_forward.rs  http_version.rs  inflight.rs  lib.rs  listener.rs  open_bi.rs  overload.rs  protocol.rs  proxy.rs  quic_transport.rs  response.rs  warmup.rs
tunnel-lib/src/config/: http_pool.rs  mod.rs  proxy_buffers.rs  quic.rs  tcp.rs
tunnel-lib/src/egress/: http.rs
tunnel-lib/src/engine/: bridge.rs  mod.rs  relay.rs
tunnel-lib/src/infra/: cpu.rs  http_server.rs  mod.rs  observability.rs  peek_buf.rs  pki.rs  runtime.rs
tunnel-lib/src/models/: msg.rs
tunnel-lib/src/plugin/: ctx.rs  dispatcher.rs  egress.rs  ingress.rs  metrics.rs  mod.rs  module.rs  registry.rs  route.rs  service.rs
tunnel-lib/src/proto/: tunnel.proto
tunnel-lib/src/protocol/: detect.rs  http_utils.rs  mod.rs  rewrite.rs
tunnel-lib/src/protocol/driver/: h1.rs  h2.rs  mod.rs
tunnel-lib/src/proxy/: balancer.rs  base.rs  buffer_params.rs  core.rs  h2.rs  h2_proxy.rs  http.rs  http_connector.rs  http_flow.rs  mod.rs  peers.rs  rules.rs  tcp.rs  upstream.rs
tunnel-lib/src/transport/: addr.rs  listener.rs  mod.rs  quic.rs  quinn_io.rs  tcp_params.rs
tunnel-service/: Cargo.toml
tunnel-service/src/: lib.rs  main.rs  proto.rs  service.rs
tunnel-service/src/cli/: mod.rs
tunnel-service/src/token/: cache.rs
tunnel-service/src/watch/: mod.rs
tunnel-store/: Cargo.toml
tunnel-store/src/: lib.rs  rules.rs  server_config.rs  sqlite.rs  sqlite_rules.rs  token.rs  traits.rs
(+696 files in other folders)
