[workspace]

members = [
    "tunnel-lib",
    "tunnel-store",
    "tunnel-service",
    "server",
    "client",
    "ci-helpers",
]

resolver = "2"

[profile.release]
lto = "fat"            # Full cross-crate LTO: enables whole-program inlining and
                       # dead-code elimination across all crates.  ~5-15% better
                       # throughput vs "thin" at the cost of slower release builds.
opt-level = 3
codegen-units = 1      # Single codegen unit enables better inlining
strip = "debuginfo"    # Smaller binaries; retain symbol names for stack traces
panic = "abort"        # No unwinding machinery; smaller binary + faster panic path

[patch.crates-io]
dial9-tokio-telemetry = { git = "https://github.com/dial9-rs/dial9-tokio-telemetry.git", rev = "64564b26b7f114a9788003f07e8bfc24307f31b5" }
