[package]
name = "ci-helpers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# Not published; used only by CI integration tests.

[[bin]]
name = "grpc-echo-server"
path = "src/grpc_echo_server.rs"

[[bin]]
name = "ws-echo-server"
path = "src/ws_echo_server.rs"

[[bin]]
name = "http-echo-server"
path = "src/http_echo_server.rs"

[[bin]]
name = "ci-test-client"
path = "src/ci_test_client.rs"

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9"

[dependencies]
tonic = { version = "0.14", features = ["tls-aws-lc", "tls-native-roots", "tls-webpki-roots"] }
tonic-health = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
serde_json = "1"
bytes = "1"
tokio-stream = "0.1"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
