[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "main.rs"

[dependencies]
tunnel-lib = { path = "../tunnel-lib" }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
bytes = "1.9"
httparse = "1.9"
hyper = { version = "1.8", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.0"
http-body-util = "0.1"
futures-util = "0.3"
async-trait = "0.1"
http = "1.0"
