[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "client"
path = "main.rs"

[features]
default = []
dial9-telemetry = ["dep:dial9-tokio-telemetry"]

[dependencies]
tunnel-lib = { path = "../tunnel-lib" }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs", "bloom"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
bytes = "1.9"
httparse = "1.9"
hyper = { version = "1.8", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "aws-lc-rs"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.0"
http-body-util = "0.1"
futures-util = "0.3"
async-trait = "0.1"
http = "1.0"
arc-swap = "1.7"
figment = { version = "0.10", features = ["yaml", "env"] }
rand = "0.9"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
dial9-tokio-telemetry = { version = "0.2.0", features = ["cpu-profiling"], optional = true }
