[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "main.rs"

[dependencies]
tunnel-lib = { path = "../tunnel-lib" }
tokio = { version = "1.49", features = ["full", "io-util"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
bytes = "1.9"
httparse = "1.9"
rcgen = "0.14"
hyper = { version = "1.8", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
http-body-util = "0.1"
async-trait = "0.1"
tokio-rustls = "0.26"
prometheus = "0.13"
lazy_static = "1.5"
subtle = "2.5"