[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "server"
path = "main.rs"

[features]
default = []
profiling = ["dep:pprof", "dep:libc", "dep:tracing-chrome"]

[dependencies]
tunnel-lib = { path = "../tunnel-lib" }
tunnel-store = { path = "../tunnel-store", features = ["server-config"] }
subtle = "2"
hex = "0.4"
tokio = { version = "1.49", features = ["full", "io-util"] }
tokio-util = "0.7"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
bytes = "1.9"
httparse = "1.9"
rcgen = "0.14"
hyper = { version = "1.8", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
http-body-util = "0.1"
async-trait = "0.1"
tokio-rustls = "0.26"
prometheus = "0.13"
lazy_static = "1.5"
arc-swap = "1.7"
notify = { version = "6.1", features = ["macos_kqueue"] }
figment = { version = "0.10", features = ["yaml", "env"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
crossbeam-utils = "0.8"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
pprof = { version = "0.14", features = ["flamegraph", "frame-pointer"], optional = true }
libc = { version = "0.2", optional = true }
tracing-chrome = { version = "0.7", optional = true }
