[package]
name = "tunnel-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
bytes = "1.9"
thiserror = "2.0"
prost = "0.13"
sha2 = "0.10"
async-trait = "0.1"
webpki-roots = { version = "0.26", optional = true }
hyper = { version = "1.5", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "ring"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls", "native-tls-vendored"], optional = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
warmup = ["hyper", "hyper-util", "http-body-util", "hyper-rustls", "webpki-roots", "tokio-tungstenite", "tonic", "futures"]
egress = ["hyper", "hyper-util", "http-body-util", "hyper-rustls", "webpki-roots", "futures"]

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
