[package]
name = "tunnel-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs", "bloom"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rcgen = "0.14"
tokio = { version = "1.49", features = ["full"] }
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
bytes = "1.9"
httparse = "1.9"
hyper = { version = "1.8", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "aws-lc-rs"] }
http-body-util = "0.1"
futures-util = "0.3"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1.0"
arc-swap = "1"
dashmap = "6.1"
parking_lot = "0.12"
tokio-rustls = "0.26"
webpki-roots = "0.26"
hpack = "0.3"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
