[package]
name = "tunnel-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["sqlite"]
sqlite = ["sqlx"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }
