[package]
name = "tunnel-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["sqlite"]
sqlite = ["sqlx", "serde_json"]
server-config = ["figment", "tunnel-lib"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = [] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }
serde_json = { version = "1.0", optional = true }
figment = { version = "0.10", features = ["yaml", "env"], optional = true }
tunnel-lib = { path = "../tunnel-lib", optional = true }
